# gpt

./: Dockerfile  README.md  attention.py  dataset.py  deployment.ipynb  deployment_handler.py  gcp_deployment.ipynb  generate.py  gpt.ipynb  gpt.py  kfp tutorial.ipynb  model.py  pipeline.ipynb  pyproject.toml  requirements.txt  scratch.ipynb
src/: __init__.py  attention.py  attention_slow.py  dataset.py  deploy_requirements.txt  gcp_predictor.py  generate.py  model.py
