[project]
name = "gpt"
version = "2024.10.31"
dependencies = [
    "torch~=2.5.1",
    "tiktoken~=0.8.0",
    "numpy~=2.1.2",
]
requires-python = "3.12"

[project.optional-dependencies]
dev = [
    "jupyterlab"
]
cloud = [
    "kfp~=2.9.0", # prev 2.4.0
    "google-cloud-storage~=2.14.0",
    "google-cloud-aiplatform~=1.38.1",
    "google-cloud-aiplatform[prediction]",
]
